--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,44 @@ body{
 *{
   scroll-behavior: smooth;
 }
+.decision{
+  margin: auto;
+  position: fixed;
+  width: 400px;
+  height: 150px;
+  top: 30px;
+  left: 0;
+  right: 0;
+  max-width: 90%;
+  text-align: center;
+  padding-top: 30px;
+  border-width: 2px;
+}
+.decision span{
+font-size: 26px;
+font-weight: 600;
+}
+.decision button{
+border: 0;
+  outline: none;
+  height: 35px;
+  width: 100px;
+  color: #fff;
+  margin-left: 10px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+#button_nie{
+  background: #e74c3c;
+}
+.dark #button_nie{
+  background: #d63b2b;
+}
+#button_tak{
+  background: #2ecc71;
+}
+.dark #button_tak{
+  background: #1dbb60;
+}
+@keyframes slideInDown{0%{-webkit-transform:translate3d(0,-100%,0);transform:translate3d(0,-100%,0);visibility:visible}to{-webkit-transform:translateZ(0);transform:translateZ(0)}}
